<resources>
    <string name="app_name">Calculator App</string>
    <string name="btnZero">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>

    <string name="btnDiv">/</string>
    <string name="btnTimes">X</string>
    <string name="btnMinus">-</string>
    <string name="btnPlus">+</string>
    <string name="btnEqual">=</string>
    <string name="btnClear">CLR</string>
    <string name="decPoint">.</string>

    <string name="result">|Calc App</string>

</resources>