<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:padding="70dp"
        android:background="@color/screen"
        android:textSize="48sp"
        android:gravity="end|bottom"
        android:text="@string/result"
        android:onClick="onDigit"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/btn7"
            android:textSize="24sp"
            android:backgroundTint="@color/btnColor"
            android:onClick="onDigit"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/btn8"
            android:textSize="24sp"
            android:backgroundTint="@color/btnColor"
            android:onClick="onDigit"
            />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/btn9"
            android:textSize="24sp"
            android:backgroundTint="@color/btnColor"
            android:onClick="onDigit"
            />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/btnDiv"
            android:textSize="24sp"
            android:backgroundTint="@color/btnColor"
            android:onClick="onOperator"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/btn4"
            android:textSize="24sp"
            android:backgroundTint="@color/btnColor"
            android:onClick="onDigit"
            />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/btn5"
            android:textSize="24sp"
            android:backgroundTint="@color/btnColor"
            android:onClick="onDigit"
            />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/btn6"
            android:textSize="24sp"
            android:backgroundTint="@color/btnColor"
            android:onClick="onDigit"
            />

        <Button
            android:id="@+id/btnTimes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/btnTimes"
            android:textSize="24sp"
            android:backgroundTint="@color/btnColor"
            android:onClick="onOperator"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/btn1"
            android:textSize="24sp"
            android:backgroundTint="@color/btnColor"
            android:onClick="onDigit"
            />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/btn2"
            android:textSize="24sp"
            android:backgroundTint="@color/btnColor"
            android:onClick="onDigit"
            />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/btn3"
            android:textSize="24sp"
            android:backgroundTint="@color/btnColor"
            android:onClick="onDigit"
            />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/btnMinus"
            android:textSize="24sp"
            android:backgroundTint="@color/btnColor"
            android:onClick="onOperator"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/btnZero"
            android:textSize="24sp"
            android:backgroundTint="@color/btnColor"
            android:onClick="onDigit"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btnDecPoint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/decPoint"
            android:textSize="24sp"
            android:backgroundTint="@color/btnColor"
            android:onClick="onDecimalPoint"
            tools:ignore="NestedWeights" />


        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/btnClear"
            android:textSize="24sp"
            android:backgroundTint="@color/btnColor"
            android:onClick="onClear"
            />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/btnPlus"
            android:textSize="24sp"
            android:backgroundTint="@color/btnColor"
            android:onClick="onOperator"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="2dp"
            android:text="@string/btnEqual"
            android:textSize="24sp"
            android:backgroundTint="@color/btnColor"
            android:onClick="onEqual"
            tools:ignore="NestedWeights" />

    </LinearLayout>

</LinearLayout>